kustomization/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpk-api
  namespace: rpk-api
spec:
  selector:
    app: rpk-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
